# AndroidFluxKlein

./: .gitattributes  .gitignore  README.md  build.gradle.kts  output.csv  push_model.sh  settings.gradle.kts  stats.csv
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/scsonic/fluxklein/demo/: AppLogger.java  CrashHandler.java  FluxKleinApp.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
libFluxKlein/: build.gradle.kts
libFluxKlein/src/main/cpp/: CMakeLists.txt  fluxklein-jni.cpp
libFluxKlein/src/main/java/com/scsonic/fluxklein/: FluxKlein.java  FluxKleinConfig.java  ProgressListener.java
